[project]
name = "hedongli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.40.25",
    "django>=5.2.5",
    "django-debug-toolbar>=6.0.0",
    "django-ninja>=1.4.3",
    "gevent>=25.9.1",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "pymongo>=4.14.1",
    "requests>=2.31.0",
]

[dependency-groups]
dev = [
    "djlint>=1.36.4",
]
